[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Strums/4Key.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/InfinityChartEditor.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Icons/bf.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Icons/dad.png" type="Texture" id=4]
[ext_resource path="res://Scripts/HealthIcon.gd" type="Script" id=5]

[node name="InfinityChartEditor" type="Node2D"]
script = ExtResource( 2 )

[node name="Opponent" parent="." instance=ExtResource( 1 )]
position = Vector2( 202, 110 )
scale = Vector2( 0.5, 0.5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 602, 110 )
scale = Vector2( 0.5, 0.5 )

[node name="MainSection" type="Node2D" parent="."]
position = Vector2( 0, 70 )

[node name="FardSection" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.35 )
position = Vector2( 0, 70 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 642.0
margin_right = 165.0
margin_bottom = 707.0
text = "Current Section: 0
Song Position: 0:00/0:00
Cur Beat: 0
Cur Step: 0"

[node name="IconP2" type="Sprite" parent="."]
position = Vector2( 202, 42 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 3
script = ExtResource( 5 )

[node name="IconP1" type="Sprite" parent="."]
position = Vector2( 602, 42 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
hframes = 3
script = ExtResource( 5 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 796.0
margin_top = 14.0
margin_right = 1263.0
margin_bottom = 701.0
tab_align = 0

[node name="Song" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Charting" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="EnemySide" type="CheckBox" parent="TabContainer/Charting"]
margin_right = 24.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0
text = "Place notes on Enemy/Opponent side"

[node name="Section" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Notes" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
